--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<!-- <meta name='viewport' content='width=device-width,initial-scale=1'> -->
 	<title>HoldOn</title>
 	<link rel='icon' type='image/png' href='/holdon.ico'>
 	<link rel='stylesheet' href='bundle.css'>
